@@ -1,3 +1,8 @@
+2006-08-28  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Matrix.R (Matrix): + 'forceCheck' argument; dimnames setting
+	in all cases.
+
 2006-08-27  Douglas Bates  <bates@R-project.org>
 
 	* src/dense.[ch],init.c, R/ddenseMatrix.R, man/band.Rd
